# bankapp

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml  test.yml
bankapp/: __init__.py  account.py  app.py  config.py  constants.py  exceptions.py  index.py  logging.py  logging_settings.py  models.py  transaction.py  transactions.py  utils.py  validators.py
bankapp/account/: __init__.py  register.py
static/: style.less
templates/: base.html  deposit.html  index.html  login.html  navbar.html  register.html  transactions.html  withdraw.html
tests/: __init__.py  test_account.py  test_bankapp.py  test_index.py  test_login.py  test_next_redirect.py  test_register.py  test_transaction_log.py  test_withdraw_deposit.py
