[tool.poetry]
name = "bankapp"
version = "0.1.0"
description = ""
authors = ["gwy15 <gwy15thu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^1.1.2"
Flask-WTF = "^0.14.3"
Flask-SQLAlchemy = "^2.5.1"
Flask-Login = "^0.5.0"
Flask-Bcrypt = "^0.7.1"
python-dotenv = "^0.17.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.8.0"
autopep8 = "^1.5.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
